--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "canvas": "^2.10.2",
     "css-layout": "^1.1.1",
-    "fabric": "^5.3.0"
+    "fabric": "^5.3.0",
+    "node-html-parser": "^6.1.4"
   }
 }
